fixes issue with z-index positioning for dropdown

--- a/src/dropdown/dropdown.styl
+++ b/src/dropdown/dropdown.styl
@@ -1,5 +1,4 @@
 .dropdown
-    position: relative
     display: inline-block
 
     &:hover
@@ -27,7 +26,7 @@
     border-bottom-right-radius: $border-radius
     border-bottom-left-radius: $border-radius
     margin-top: 6px
-    margin-left: -18px
+    margin-left: -19px
     min-width: 160px
     box-shadow: 0 0 0 0 rgba(0,0,0,0.2)
 
